--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=noreply.ideapp@gmail.com
-spring.mail.password=wdxg pibk wvkd rgie
+spring.mail.password=sphk jnfq qtrt dgnf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
