feat: Se implementa dockerizacion del servicio y pipeline build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,7 @@
-spring.application.name=User Service
+spring.profiles.active=@spring.profiles.active@
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/studytrack
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.application.name=studytrack
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=noreply.ideapp@gmail.com
-spring.mail.password=sphk jnfq qtrt dgnf
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+log.level=INFO
+log.dir=./logs/
+log.name=${spring.application.name}
