feat: ajuste de yml para el uso de db postgresql en git action

--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -9,6 +9,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     environment: dev-studytrack
+	
+	services:
+	      postgres:
+	        image: postgres:15
+	        env:
+	          POSTGRES_DB: studytrack
+	          POSTGRES_USER: postgres
+	          POSTGRES_PASSWORD: postgres
+	        ports:
+	          - 5432:5432
+	        options: >-
+	          --health-cmd pg_isready
+	          --health-interval 10s
+	          --health-timeout 5s
+	          --health-retries 5
 
     steps:
       - name: Checkout code
