--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -63,8 +63,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/my-java-service:latest .
+          docker build -t ghcr.io/${{ github.repository.lowercase() }}/my-java-service:latest .
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/${{ github.repository }}/my-java-service:latest
+          docker push ghcr.io/${{ github.repository.lowercase() }}/my-java-service:latest
