--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -61,10 +61,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker image
-        run: |
-          docker build -t ghcr.io/${{ github.repository.lowercase() }}/my-java-service:latest .
+		  - name: Build Docker image
+		    run: |
+		      docker build -t ghcr.io/${{ github.repository | toLower }}/my-java-service:latest .
 
-      - name: Push Docker image
-        run: |
-          docker push ghcr.io/${{ github.repository.lowercase() }}/my-java-service:latest
+		  - name: Push Docker image
+		    run: |
+		      docker push ghcr.io/${{ github.repository | toLower }}/my-java-service:latest
