ci: se ajusta parametro para captura de namespace sin repo en github

--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -59,11 +59,10 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_PAT }}
 
-      - name: Set lowercase repository name
-        id: repo
-        run: echo "REPO_LC=ghcr.io/${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+	  - name: Set lowercase namespace to your user
+		run: echo "REPO_LC=ghcr.io/${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
 
       - name: Build Docker image
         run: |
