--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -62,7 +62,7 @@ jobs:
           password: ${{ secrets.CR_PAT }}
 
 	  - name: Set lowercase namespace to your user
-		run: echo "REPO_LC=ghcr.io/${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
+	    run: echo "REPO_LC=ghcr.io/$(echo $GITHUB_REPOSITORY_OWNER | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       - name: Build Docker image
         run: |
