se ajustan archivos

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -19,3 +19,8 @@ spring.mail.username=${SPRING_MAIL_USERNAME:noreply.ideapp@gmail.com}
 spring.mail.password=${SPRING_MAIL_PASSWORD:sphk jnfq qtrt dgnf}
 spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH:true}
 spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE:true}
+
+# application.properties
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
